2007-06-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/autoload.el (autoload-find-destination): Return nil
	rather than throwing `up-to-date'.
	(autoload-generate-file-autoloads): Adjust correspondingly.
	(update-file-autoloads): Be careful to let-bind
	autoload-modified-buffers and adjust to new calling conventions.
	(autoload-modified-buffers): Make it a dynamically scoped var.
	(update-directory-autoloads): Use file-relative-name instead of
	autoload-trim-file-name.
	(autoload-insert-section-header): Don't use autoload-trim-file-name
	since the file is already relative now.
	(autoload-trim-file-name): Remove.

	* vc-arch.el (vc-arch-add-tagline): Do a slightly cleaner job.
	(vc-arch-complete, vc-arch--version-completion-table)
	(vc-arch-revision-completion-table): New functions to provide
	completion of revision names.
	(vc-arch-trim-find-least-useful-rev, vc-arch-trim-make-sentinel)
	(vc-arch-trim-one-revlib, vc-arch-trim-revlib): New functions
	to let the user trim the revlib.

	* vc.el: Add new VC operation `revision-completion-table'.
	(vc-default-revision-completion-table): New function.
	(vc-version-diff, vc-version-other-window): Use it to provide
	completion of revision names if the backend provides it.

	* log-edit.el (log-edit-changelog-entries): Use with-current-buffer.

	* vc-svn.el (vc-svn-repository-hostname): Adjust to non-XML format
	of newer .svn/entries.

2007-06-25  David Kastrup  <dak@gnu.org>

	* calc/calc-poly.el (math-padded-polynomial)
	(math-partial-fractions): Add some function comments.

2007-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	Make `outbuf' optional.
	(update-file-autoloads): Use it.

2007-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/autoload.el (autoload-modified-buffers): New var.
	(autoload-find-destination): Keep it uptodate.
	(autoload-save-buffers): New fun.